; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_bytecodewriter.c_write_srcregs.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_bytecodewriter.c_write_srcregs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bc_writer = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.bc_writer*, i32*, %struct.bytecode_buffer*)* }
%struct.instruction = type { i32, i32*, i32, i64 }
%struct.bytecode_buffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bc_writer*, %struct.instruction*, %struct.bytecode_buffer*)* @write_srcregs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_srcregs(%struct.bc_writer* %0, %struct.instruction* %1, %struct.bytecode_buffer* %2) #0 {
  %4 = alloca %struct.bc_writer*, align 8
  %5 = alloca %struct.instruction*, align 8
  %6 = alloca %struct.bytecode_buffer*, align 8
  %7 = alloca i32, align 4
  store %struct.bc_writer* %0, %struct.bc_writer** %4, align 8
  store %struct.instruction* %1, %struct.instruction** %5, align 8
  store %struct.bytecode_buffer* %2, %struct.bytecode_buffer** %6, align 8
  %8 = load %struct.instruction*, %struct.instruction** %5, align 8
  %9 = getelementptr inbounds %struct.instruction, %struct.instruction* %8, i32 0, i32 3
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %23

12:                                               ; preds = %3
  %13 = load %struct.bc_writer*, %struct.bc_writer** %4, align 8
  %14 = getelementptr inbounds %struct.bc_writer, %struct.bc_writer* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (%struct.bc_writer*, i32*, %struct.bytecode_buffer*)*, i32 (%struct.bc_writer*, i32*, %struct.bytecode_buffer*)** %16, align 8
  %18 = load %struct.bc_writer*, %struct.bc_writer** %4, align 8
  %19 = load %struct.instruction*, %struct.instruction** %5, align 8
  %20 = getelementptr inbounds %struct.instruction, %struct.instruction* %19, i32 0, i32 2
  %21 = load %struct.bytecode_buffer*, %struct.bytecode_buffer** %6, align 8
  %22 = call i32 %17(%struct.bc_writer* %18, i32* %20, %struct.bytecode_buffer* %21)
  br label %23

23:                                               ; preds = %12, %3
  store i32 0, i32* %7, align 4
  br label %24

24:                                               ; preds = %45, %23
  %25 = load i32, i32* %7, align 4
  %26 = load %struct.instruction*, %struct.instruction** %5, align 8
  %27 = getelementptr inbounds %struct.instruction, %struct.instruction* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = icmp ult i32 %25, %28
  br i1 %29, label %30, label %48

30:                                               ; preds = %24
  %31 = load %struct.bc_writer*, %struct.bc_writer** %4, align 8
  %32 = getelementptr inbounds %struct.bc_writer, %struct.bc_writer* %31, i32 0, i32 0
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32 (%struct.bc_writer*, i32*, %struct.bytecode_buffer*)*, i32 (%struct.bc_writer*, i32*, %struct.bytecode_buffer*)** %34, align 8
  %36 = load %struct.bc_writer*, %struct.bc_writer** %4, align 8
  %37 = load %struct.instruction*, %struct.instruction** %5, align 8
  %38 = getelementptr inbounds %struct.instruction, %struct.instruction* %37, i32 0, i32 1
  %39 = load i32*, i32** %38, align 8
  %40 = load i32, i32* %7, align 4
  %41 = zext i32 %40 to i64
  %42 = getelementptr inbounds i32, i32* %39, i64 %41
  %43 = load %struct.bytecode_buffer*, %struct.bytecode_buffer** %6, align 8
  %44 = call i32 %35(%struct.bc_writer* %36, i32* %42, %struct.bytecode_buffer* %43)
  br label %45

45:                                               ; preds = %30
  %46 = load i32, i32* %7, align 4
  %47 = add i32 %46, 1
  store i32 %47, i32* %7, align 4
  br label %24

48:                                               ; preds = %24
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
